# attachment-converter

./: .gitignore  .hgignore  .ocamlformat  .ocamlinit  COPYING  DOCUMENTATION_TODO  GNUmakefile  Makefile  README.org  TODO  attachment-converter.opam  attachment-converter.opam.locked  attachment-converter.opam.template  bug_tracker.org  bugs.org  conditional-test.sh  config  converted.mbox  dune  dune-project  eval-command.sh  file-format-conversions.md  get-started.sh  letterhead.docx  main.ml  main.ml~  make-config.sh  mrmime_starter_code.ml  mrmime_todos.org  os-install.sh  output.txt  private-cram-test.sh  test-config-file  unix.txt  upcased_and_deleted  use-output.top  windows.txt
.githooks/: pre-commit
arch/: ARCH_PACKAGING.md  PKGBUILD  README.txt
conversion-scripts/: catdoc-wrapper.sh  dummy-script.sh  pandoc-docx-to-txt.sh  pandoc-wrapper.sh  pdf2archive-wrapper.sh  pdftotext-pdf-to-txt.sh  pdftotext-wrapper.sh  soffice-to-pdfa.sh  soffice-to-tsv.sh  soffice-to-txt.sh  soffice-wrapper.sh  ssconvert-wrapper.sh  vips-to-tif.sh  vips-wrapper.sh
cram-tests/: attc-executable.t  base64.sh  command_help.t  dune
cram-tests/bmp-to-tiff.t/: run.t
cram-tests/doc-to-pdfa.t/: run.t
cram-tests/doc-to-text.t/: run.t
cram-tests/docx-to-pdfa.t/: run.t
cram-tests/docx-to-text.t/: run.t
cram-tests/file-conversion-tests.t/: expected-converted-test-doc-to-text.txt  expected-converted-test-docx-to-text.txt  expected-converted-test-xls-to-tsv.tsv  run.t
cram-tests/gif-to-tiff.t/: run.t
cram-tests/jpeg-to-tiff.t/: run.t
cram-tests/pdf-to-pdfa.t/: run.t
cram-tests/xls-to-tsv.t/: run.t
debian/: attc.dirs  attc.manpages  attc.substvars  changelog  control  copyright  include-binaries  rules
debian/source/: options
developer_notes/: bug_tracker.org  bug_tracker.org_archive  conan.org  matters_for_deliberation.org  possible_new_feature_tracker.org  private_cram_tests.org  refactoring_tracker.org
doc/: attc.1  design-notes.org  new-features.md  new_features.md  releasing.md  sandboxing.md
homebrew/: HOMEBREW_PACKAGING.md  README.txt
homebrew/Formula/: attc.rb
lib/: backend.ml  backend.mli  config.ml  config_entry_error.ml  config_key.ml  config_key.mli  configuration.ml  configuration.mli  configuration_error.ml  convert.ml  convert_error.ml  convert_old.ml  dependency.ml  dependency.mli  dependency_error.ml  dune  error.ml  error.mli  errorHandling.ml  errorHandling.mli  error_intf.ml  error_message.ml  error_message.mli  formats_error.ml  global_error.ml  global_error_intf.ml  header.ml  header.mli  lib.ml  lib_matt.ml  line_endings.ml  logs.ml  mbox.ml  mbox.mli  mbox_error.ml  mbox_old.ml  mbox_simple.ml  mime_type.ml  mime_type.mli  mime_type_error.ml  (+12 more)
make-shells/: os-deps.sh  os-install.sh
makefiles/: Makefile.debug  Makefile.dldc  Makefile.gnumake  Makefile.help  Makefile.version  Makefile.version.hg  Makefile.version.none
test/: config_tests.ml
tests/: config_tests.ml  convert_repl_tests.ml  convert_tests.ml  dependency_tests.ml  dune  field_tests.ml  field_value_tests.ml  header_tests.ml  mbox_simple_tests.ml  mbox_tests.ml  mime_type_tests.ml  param_tests.ml  serialize_tests.ml  test_email  utils.ml
tests/cram_tests/: dune  test1.t  test2.ml  test2.t
ubuntu_wsl/: OpamPack.sh  README.txt  UBUNTU_PACKAGING.md  opampack-packs  opampack-upacks
ubuntu_wsl/prelude.100.1/: opam
ubuntu_wsl/prelude.100.7/: opam
