; attachment-converter                                -*- dune -*-
; dune
; Matt Teichman <https://elucidations.now.sh>

(executable
 (name main)
 (public_name attc)
 (promote (until-clean))
 (libraries prelude lib mrmime threads netstring unix cmdliner))

(data_only_dirs ubuntu_wsl)

(env
 (dev ; make warnings non-fatal
  (flags
   (:standard -warn-error -A)))
 (release
  (flags
   (:standard -ccopt -static))))
