; attachment-converter                                -*- dune -*-
; dune
; Matt Teichman <https://elucidations.now.sh>

(library
 (name lib)
 (libraries prelude mrmime threads netstring unix re)
 (modules
  lib
  global_error
  global_error_intf
  config_key
  configuration
  configuration_error
  errorHandling
  report
  convert
  mbox
  header
  utils
  serialize
  skeleton
  progress_bar
  mime_type
  dependency))

(env
 (dev ; make warnings non-fatal
  (flags
   (:standard -warn-error -A))))
