; attachment-converter                                -*- dune -*-
; dune
; Matt Teichman <https://elucidations.now.sh>

(library
 (name lib)
 (libraries prelude mrmime threads netstring unix re)
 (modules
  lib
  error
  error_intf
  config_key
  configuration
  config_entry_error
  formats_error
  report
  convert
  mbox
  header
  utils
  serialize
  skeleton
  progress_bar
  mime_type
  mime_type_error
  dependency))

(env
 (dev ; make warnings non-fatal
  (flags
   (:standard -warn-error -A))))
