(tests
  (names config_tests convert_tests mbox_tests)
  (deps
    (file test_emails/test_email_1.eml)
    (file test_emails/test_email_2.eml)
    (file test_emails/test_email_3.eml)
    (file test_emails/test_email_4.eml)
    (file test_emails/test_email_5.eml)
    (file test_emails/test_email_6.eml))
  (libraries lib ounit2))
